dataset1235/2025-2/610742602/users/4180041627/executions/2563853024_3198308593.log
== RUN (2025-09-02 20:33:27)
-- CODE: 
import.match
pi=match.pi

raio = float(input("insira o raio") 
volume = 4 / 3 * pi * (raio ** 3)  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 1
    import.match
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 1
    import.match
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 1
    import.match
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 1
    import.match
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 1
    import.match
          ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 1
    import.match
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:30:50)
-- CODE: 
import.match
pi=match.pi

raio = float(input("insira o raio") 
volume = 4 / 3 * pi * raio * 3  
print(round(volume,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 1
    import.match
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 1
    import.match
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 1
    import.match
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 1
    import.match
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 1
    import.match
          ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 1
    import.match
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:34:23)
-- CODE: 
import math
pi=math.pi

raio = float(input("insira o raio")) 
volume = 4 / 3 * pi * (raio ** 3)  
print(round(volume,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
insira o raio696.91
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
insira o raio4.1888
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
insira o raio137.2583
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
insira o raio4188.7902
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
insira o raio7238.2295
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
insira o raio0.5236
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:34:21)
-- CODE: 
import math
pi=math.pi

raio = float(input("insira o raio")) 
volume = 4 / 3 * pi * (raio ** 3)  
print(round(volume,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
insira o raio696.91
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
insira o raio4.1888
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
insira o raio137.2583
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
insira o raio4188.7902
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
insira o raio7238.2295
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
insira o raio0.5236
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:34:12)
-- CODE: 
import math
pi=math.pi

raio = float(input("insira o raio")) 
volume = 4 / 3 * pi * (raio ** 3)  
print(round(volume,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
insira o raio696.91
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
insira o raio4.1888
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
insira o raio137.2583
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
insira o raio4188.7902
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
insira o raio7238.2295
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
insira o raio0.5236
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
